Refacor task update and create methods, add DTO mapping and transactional handling